--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "dev": "nodemon backend/server.js",
+    "dev": "concurrently \"npm start\" \"npm run frontend\"",
     "start": "node backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
   },
