--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "dev": "concurrently \"npm start\" \"npm run frontend\"",
-    "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "frontend": "npm start --prefix ./frontend",
+    "dev": "concurrently \"npm run start\" \"npm run frontend\""  
   },
+  
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  }
+  "license": "ISC"
 }
